--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <link rel="stylesheet" href="assets/css/preloader.css">
+    <!link rel="stylesheet" href="assets/css/preloader.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="assets/images/favicon.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="assets/images/Himu 600x600.jpg" type="image/x-png">
     <!-- Font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
@@ -40,13 +40,13 @@
 
 <body class="no-scroll-preload">
     <!-- loader -->
-    <div class="loader-container">
-        <div class="atom">
-            <div class="electron"></div>
-            <div class="electron-alpha"></div>
-            <div class="electron-omega"></div>
-        </div>
-    </div>
+    <!div class="loader-container">
+        <!div class="atom">
+            <!div class="electron"></div>
+            <!div class="electron-alpha"></div>
+            <!div class="electron-omega"></div>
+        <!/div>
+    <!/div>
 
     <!--Dynamic Nav Bar-->
 
@@ -58,14 +58,14 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">John Doe</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">Himu Mia</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                    <img src="assets/images/Himu 600x600.jpg" alt="" class="rounded-circle" height="200" width="200"><!dp-male svg>
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                    data-words="Research,Problem Solving,Machine Learning, Deep Learning,Engineering, Mentoring"></span>
                 </span>
                 <div>
                     <div class="social-icons">
